--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,18 +13,18 @@ jobs:
           echo "$OP_CONNECT_CREDENTIALS" > 1password-credentials.json
           docker-compose -f tests/fixtures/docker-compose.yml up -d && sleep 10
       - name: Configure 1Password Connect
-        uses: ./configure # 1password/load-secrets-action/configure@<version>
+        uses: 1password/load-secrets-action/configure@v1
         with:
           connect-host: http://localhost:8080
           connect-token: ${{ secrets.OP_CONNECT_TOKEN }}
       - name: Load secrets
-        uses: ./ # 1password/load-secrets-action@<version>
+        uses: 1password/load-secrets-action@v1
         env:
           SECRET: op://v5pz6venw4roosmkzdq2nhpv6u/hrgkzhrlvscomepxlgafb2m3ca/password
           SECRET_IN_SECTION: op://v5pz6venw4roosmkzdq2nhpv6u/hrgkzhrlvscomepxlgafb2m3ca/test-section/password
           UNMASKED_VALUE: op://v5pz6venw4roosmkzdq2nhpv6u/hrgkzhrlvscomepxlgafb2m3ca/test-section/username
       - name: Load multiline secret
-        uses: ./ # 1password/load-secrets-action@<version>
+        uses: 1password/load-secrets-action@v1
         env:
           MULTILINE_SECRET: op://v5pz6venw4roosmkzdq2nhpv6u/ghtz3jvcc6dqmzc53d3r3eskge/notesPlain
       - name: Print environment variables with masked secrets
@@ -32,7 +32,7 @@ jobs:
       - name: Assert test secret values
         run: ./tests/assert-env-set.sh
       - name: Remove secrets
-        uses: ./ # 1password/load-secrets-action@<version>
+        uses: 1password/load-secrets-action@v1
         with:
           unset-previous: true
       - name: Print environment variables with secrets removed
@@ -40,7 +40,7 @@ jobs:
       - name: Assert removed secrets
         run: ./tests/assert-env-unset.sh
       - name: Load secret again
-        uses: ./ # 1password/load-secrets-action@<version>
+        uses: 1password/load-secrets-action@v1
         env:
           SECRET: op://v5pz6venw4roosmkzdq2nhpv6u/hrgkzhrlvscomepxlgafb2m3ca/password
           SECRET_IN_SECTION: op://v5pz6venw4roosmkzdq2nhpv6u/hrgkzhrlvscomepxlgafb2m3ca/test-section/password
